# GTKsimpleApplication

./: CMakeLists.txt  README.md
include/: application.hpp
src/: application.cpp  main.cpp
